--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test/*.js",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "Matias Gelpi",
   "license": "ISC",
