--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "node": "12.22.12"
+    "node": "12.22.12",
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "chai": "*",
-    "express": "^4.18.1",
     "mocha": "*",
     "nodemon": "^2.0.19",
     "standard": "^17.0.0",
